<resources>
    <string name="app_name">SpaceManager</string>
    <string name="SpaceManager">Space Manager</string>
    <string name="iniciar">Iniciar sessão</string>
    <string name="registo">Registar</string>
    <string name="google">Iniciar sessão com o Google</string>
    <string name="reserva">Escolha o tipo de reserva</string>
    <string name="pesquisa">Pesquisa</string>
    <string name="nome">Nome:</string>
    <string name="utilizador">Utilizador:</string>
    <string name="email">E-mail:</string>
    <string name="password">Palavra-chave:</string>
    <string name="voltar">Voltar</string>
    <string name="pesquisaPessoa">Pesquisa por pessoa</string>
    <string name="pessoa">Insira o e-mail da pessoa que procura</string>
    <string name="reservas">Reserva</string>
    <string name="opcao">Por característica</string>
    <string name="umlugar">Um lugar específico</string>
    <string name="reuniao">Por grupo</string>
    <string name="prolongar">Prolongar reserva</string>
    <string name="sair">Sair</string>
    <string name="Bhorario">Escolher horário</string>
    <string name="nPessoas">Reserva por número de pessoas*</string>
    <string name="inserirnumero">Insira o número de pessoas</string>
    <string name="nota">*O número máximo de pessoas é 4</string>
    <string name="opcaoText">Escolha as opções que pretende</string>
    <string name="monitor">Monitor</string>
    <string name="janela">Janela</string>
    <string name="arCondicionado">Ar condicionado</string>
    <string name="inserirHoras">Selecione a opção que pretende</string>
    <string name="reservaText">Reserva efetuada</string>
    <string name="meulugar">O seu posto de trabalho é o </string>
    <string name="minhasReservas">As minhas reservas</string>
    <string name="min15">15 minutos</string>
    <string name="min30">30 minutos</string>
    <string name="hora">1 hora</string>
    <string name="qualquer">Um lugar</string>
    <string name="escolha">Escolha o posto de trabalho que pretende</string>
    <string name="ocupado">Ocupado</string>
    <string name="reservado">Reservado</string>
    <string name="livre">Livre</string>
    <string name="horario">Escolha o horário que pretende</string>
    <string name="horas">Hora:</string>
    <string name="duracao">Duração:</string>
    <string name="lingua">Alterar idioma</string>
    <string name="alterarCor">Alterar aspeto</string>
    <string name="escolhaSala">Escolha a sala</string>
    <string name="escolherLugar">Escolher lugar</string>
    <string name="data">Data:</string>
    <string name="horai">Hora de início:</string>
    <string name="horaf">Hora de fim:</string>
    <string name="sala">Sala:</string>
    <string name="lugar">Posto de trabalho:</string>
    <string name="naoReserva">Este colaborador não tem nenhuma reserva neste momento</string>
    <string name="cancelarReserva">Cancelar reserva</string>
    <string name="nreservas">Reserva</string>
    <string name="seguinte">Seguinte</string>
    <string name="fazerReserva">Reservar</string>
    <string name="horaPos">Coloque uma hora posterior à hora atual</string>
    <string name="dataPos">Coloque uma data posterior à data de hoje</string>
    <string name="nhaLuagres">Não existem postos de trbalho disponíveis</string>
    <string name="naofazerreserva">Não é possível efetuar a reserva</string>
    <string name="naoprolonga">Não existe nenhuma reserva para prolongar</string>
    <string name="reservaprolonga">Reserva prolongada para as</string>
    <string name="pessoas2">2 pessoas</string>
    <string name="pessoas3">3 pessoas</string>
    <string name="pessoas4">4 pessoas</string>
    <string name="pessoasnaoha">O colaborador não tem nenhuma reserva a decorrer neste neste momento</string>

    <string-array name="salas">
        <item>Sala 1</item>
    </string-array>
</resources>
