<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fundo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PessoaPesquisada"
    android:background="@color/fundo">

    <TextView
        android:id="@+id/BPesquisa"
        android:layout_width="10dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="270dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="342dp"
        android:layout_height="287dp"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/BPesquisa"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/sem_fundo3" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:text="@string/minhasReservas"
        android:textSize="14pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BVoltar"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp"
        android:background="@color/botao"
        android:text="@string/voltar"
        android:textColor="@color/fundo"
        android:textSize="9pt"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/naoExisteReserva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:textSize="14pt"
        android:text="Não existem reservas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BCancelar"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:background="@color/botao"
        android:text="@string/cancelarReserva"
        android:textColor="@color/fundo"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="230dp"
        android:textSize="10pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"  />

    <TextView
        android:id="@+id/hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horas"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="260dp"
        android:textSize="10pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/duracao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duracao"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="290dp"
        android:textSize="10pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sala"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sala"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="320dp"
        android:textSize="10pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/lugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lugar"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="350dp"
        android:textSize="10pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nreservas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:text="@string/nreservas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="41dp"
        android:layout_height="38dp"
        app:srcCompat="@drawable/anterior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="450dp"
        android:layout_marginLeft="20dp"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="41dp"
        android:layout_height="38dp"
        app:srcCompat="@drawable/aseguir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="450dp"
        android:layout_marginRight="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>