<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fundo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Opcao"
    android:background="@color/fundo">

    <TextView
        android:id="@+id/BPesquisa"
        android:layout_width="10dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="270dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="342dp"
        android:layout_height="287dp"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/BPesquisa"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/sem_fundo3" />

    <TextView
        android:id="@+id/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="10dp"
        android:text="@string/opcaoText"
        android:textSize="14pt" />

    <Button
        android:id="@+id/BObter"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="430dp"
        android:background="@color/botao"
        android:text="@string/fazerReserva"
        android:textSize="9pt"
        android:textAllCaps="false"
        android:textColor="@color/fundo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/BVoltar"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/voltar"
        android:background="@color/botao"
        android:textColor="@color/fundo"
        android:textSize="9pt"
        android:textAllCaps="false"
        android:layout_marginTop="500dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/monitor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="10pt"
        android:text="@string/monitor"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"/>

    <CheckBox
        android:id="@+id/janela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="10pt"
        android:text="@string/janela"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>